--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,9 +1,5 @@
-<h1>New food</h1>
+<h1>Add Food</h1>
 
 <%= render "form", food: @food %>
 
 <br>
-
-<div>
-  <%= link_to "Back to foods", foods_path %>
-</div>
