--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -21,6 +21,9 @@
           <li class="nav-item">
             <%= link_to 'Add Food', new_food_path, class: 'nav-link' %>
           </li>
+            <li class="nav-item">
+            <%= link_to 'General Shopping List', general_shopping_list_path, class: 'nav-link' %>
+            </li>
         <% else %>
           <li class="nav-item">
             <%= link_to 'Public Recipes', public_recipes_path, class: 'nav-link' %>
@@ -34,6 +37,7 @@
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               <%= current_user.name %>
             </a>
+
             <ul class="dropdown-menu dropdown-menu-end">
               <%= link_to 'Sign Out', destroy_user_session_path, data: { turbo_method: :delete }, class: 'dropdown-item' %>
               <!-- Add more actions here -->
