--- a/app/views/recipe_foods/new.html.erb
+++ b/app/views/recipe_foods/new.html.erb
@@ -1,6 +1,6 @@
 <!-- app/views/recipe_foods/new.html.erb -->
 
-<%= form_for [@recipe, RecipeFood.new] do |form| %>
+<%= form_with(model: [@recipe, @recipe_food], url: recipe_foods_path, method: :post) do |form| %>
   <div class="mb-3">
     <%= form.label :food_id, 'Food' %>
     <%= form.collection_select :food_id, Food.all, :id, :name, { prompt: 'Select a food' }, class: 'form-control' %>
@@ -10,11 +10,6 @@
     <%= form.label :quantity %>
     <%= form.number_field :quantity, class: 'form-control' %>
   </div>
-
-  <div class="mb-3">
-    <%= form.label :value, 'Price' %>
-    <%= form.text_field :value, class: 'form-control' %>
-  </div>
-
+  
   <%= form.submit 'Add Ingredient', class: 'btn btn-success' %>
 <% end %>
