--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -14,34 +14,16 @@
       <span class="text-start d-flex flex-direction-column"><%= @recipe.description %></span>
       <div class="d-flex justify-content-around p-2 border-bottom">
         <button type="button" class="btn btn-success">Generate Shopping List</button>
-        <%= link_to "Add Ingredient", new_recipe_food_path(@recipe), class: "btn btn-success" %>
-      </div>
-      <div class="h-50 shadow">
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Food</th>
-              <th scope="col">Quantity</th>
-              <th scope="col">Value</th>
-              <th scope="col">Actions</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @recipe.recipe_foods.each do |recipe_food| %>
-              <tr>
-                <td><%= recipe_food.food.name %></td>
-                <td><%= recipe_food.quantity %></td>
-                <td><%= recipe_food.food.price * recipe_food.quantity %></td>
-                <td><%= link_to "Modify", @recipe_food,  method: :update %> </td>
-                <td><%= link_to "Remove", @recipe_food, method: :delete %> </td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
+       <!-- Display the Add Ingredient -->
+
+       <%= link_to 'Add Ingredient', new_recipe_food_path(@recipe_food), class: 'btn btn-success' %>
+      
       </div>
     </div>
   </div>
 </div>
+
+<%= render 'recipe_foods/recipe_food', recipe: @recipe %>
 
 <div>
   <%= link_to "Edit this recipe", edit_recipe_path(@recipe) %> |
