--- a/app/views/recipe_foods/edit.html.erb
+++ b/app/views/recipe_foods/edit.html.erb
@@ -1,10 +1,27 @@
 <h1>Editing recipe food</h1>
 
-<%= render "form", recipe_food: @recipe_food %>
+<%= form_with(model: [@recipe, @recipe_food], url: recipe_recipe_food_path(@recipe, @recipe_food), method: :get) do |form| %>
+  <div class="mb-3">
+    <%= form.label :recipe_id, 'Recipe' %>
+    <%= form.collection_select :recipe_id, Recipe.all, :id, :name, { selected: @recipe_food.recipe_id }, class: 'form-control' %>
+  </div>
+
+  <div class="mb-3">
+    <%= form.label :food_id, 'Food' %>
+    <%= form.collection_select :food_id, Food.all, :id, :name, { selected: @recipe_food.food_id }, class: 'form-control' %>
+  </div>
+
+  <div class="mb-3">
+    <%= form.label :quantity %>
+    <%= form.number_field :quantity, class: 'form-control' %>
+  </div>
+
+  <%= form.submit 'Update Ingredient', class: 'btn btn-success' %>
+<% end %>
 
 <br>
 
 <div>
   <%= link_to "Show this recipe food", @recipe_food %> |
-  <%= link_to "Back to recipe foods", recipe_foods_path %>
+  <%= link_to "Back to recipe foods", recipe_path %>
 </div>
