--- a/app/views/recipe_foods/show.html.erb
+++ b/app/views/recipe_foods/show.html.erb
@@ -1,10 +1,18 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @recipe_food %>
+<!-- <%= render @recipe_food %> -->
 
+<%= render 'recipe_foods/recipe_food', recipe: @recipe %>
+<!-- 
 <div>
   <%= link_to "Edit this recipe food", edit_recipe_food_path(@recipe_food) %> |
   <%= link_to "Back to recipe foods", recipe_foods_path %>
 
   <%= button_to "Destroy this recipe food", @recipe_food, method: :delete %>
+</div>
+-->
+<div>
+  <%= link_to "Edit this recipe", edit_recipe_path(@recipe) %> |
+  <%= link_to "Back to recipes", recipes_path %>
+  <%= button_to "Destroy this recipe", @recipe, method: :delete %>
 </div>
