--- a/app/views/recipe_foods/_recipe_food.html.erb
+++ b/app/views/recipe_foods/_recipe_food.html.erb
@@ -14,8 +14,8 @@
         <td><%= recipe_food.quantity %></td>
         <td><%= number_to_currency(recipe_food.food.price * recipe_food.quantity ) %></td>
         <td>
-          <%= link_to 'Modify', recipe_foods_path(@recipe, @recipe_food) %>
-          <%= link_to 'Remove', [@recipe, @recipe_food], data: { turbo_method: :delete, confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' %>
+          <%= link_to 'Modify', recipe_recipe_food_path(@recipe, @recipe_food) %>
+          <%= link_to 'Remove', recipe_recipe_food_path[@recipe, @recipe_food], data: { turbo_method: :delete, confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' %>
         </td>
       </tr>
     <% end %>
