--- a/app/views/recipe_foods/edit.html.erb
+++ b/app/views/recipe_foods/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing recipe food</h1>
 
-<%= form_with(model: [@recipe, @recipe_food], url: recipe_recipe_food_path(@recipe, @recipe_food), method: :get) do |form| %>
+<%= form_with(model: [@recipe, @recipe_food], url: recipe_recipe_food_path(@recipe, @recipe_food), method: :patch) do |form| %>
   <div class="mb-3">
     <%= form.label :recipe_id, 'Recipe' %>
     <%= form.collection_select :recipe_id, Recipe.all, :id, :name, { selected: @recipe_food.recipe_id }, class: 'form-control' %>
@@ -15,7 +15,7 @@
     <%= form.label :quantity %>
     <%= form.number_field :quantity, class: 'form-control' %>
   </div>
-
+  
   <%= form.submit 'Update Ingredient', class: 'btn btn-success' %>
 <% end %>
 
