Fix generate shopping list link

--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -33,6 +33,6 @@
 
   <div>
     <%= form.submit "Save Food", class: "btn btn-primary" %>
-    <%= link_to "Cancel", foods_path, class: "btn btn-secondary" %>
+    <%= link_to "View Foods", foods_path, class: "btn btn-secondary" %>
   </div>
 <% end %>
