--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -3,18 +3,18 @@
     <h3 class="card-title text-center"><%= @recipe.name %></h3>
     <div class="card-body">
       <span class="text-start">Preparation time:<%= @recipe.preparation_time %> hours</span>
-       <% if user_signed_in? && current_user == @recipe.user %>
-      <div class="d-flex justify-content-end form-check form-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" <%= 'checked' if @recipe.public %> >
-        <label class="form-check-label" for="flexSwitchCheckDefault">Public</label>
+     <% if can? :manage, @recipe %>
+      <div class="form-check form-switch">
+        <label class="form-check-label" for="publicToggle">Public</label>
+        <input class="form-check-input" type="checkbox" id="publicToggle" name="recipe[public]" <%= @recipe.public ? 'checked' : '' %>>
       </div>
-      <% end %>
+       <% end %>
 
       <span class="text-start">Cooking time: <%= @recipe.cooking_time %> hours</span>
       <span class="text-start d-flex flex-direction-column"><%= @recipe.description %></span>
       <div class="d-flex justify-content-around p-2 border-bottom">
         <div>
-        <%= link_to 'Generate Shopping List', generate_shopping_list_recipe_path,  class: 'btn btn-success'  %>
+        <%= link_to 'Generate Shopping List', general_shoping_list_path,  class: 'btn btn-success'  %>
         </div>
 
        <%= link_to 'Add Ingredient', new_recipe_food_path(recipe_id: @recipe.id), class: 'btn btn-success' %>
