--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to 'Home', root_path, class: 'nav-link active', 'aria-current': 'page' %>
+          <%= link_to 'Public Recipes', root_path, class: 'nav-link active', 'aria-current': 'page' %>
         </li>
 
         <% if user_signed_in? %>
@@ -22,7 +22,7 @@
             <%= link_to 'Add Food', new_food_path, class: 'nav-link' %>
           </li>
             <li class="nav-item">
-            <%= link_to 'General Shopping List', general_shopping_list_path, class: 'nav-link' %>
+            <%= link_to 'Generate Shopping List', general_shoping_list_path, class: 'nav-link' %>
             </li>
         <% else %>
           <li class="nav-item">
