--- a/app/views/foods/_food.html.erb
+++ b/app/views/foods/_food.html.erb
@@ -1,21 +1,25 @@
-<div id="<%= dom_id food %>">
-  <p>
-    <strong>Name:</strong>
-    <%= food.name %>
-  </p>
-
-  <p>
-    <strong>Measurement unit:</strong>
-    <%= food.measurement_unit %>
-  </p>
-
-  <p>
-    <strong>Price:</strong>
-    <%= food.price %>
-  </p>
-
-  <p>
-    <strong>Quantity:</strong>
-    <%= food.quantity %>
-  </p>
+<div class="row">
+  <div class="col-md-12">
+    <table class="table table-border table-striped" id="<%= dom_id food %>">
+      <tbody>
+        <tr>
+          <th>Name</th>
+          <td><%= food.name %></td>
+        </tr>
+        <tr>
+          <th>Measurement unit</th>
+          <td><%= food.measurement_unit %></td>
+        </tr>
+        <tr>
+          <th>Quantity</th>
+          <td><%= food.quantity %></td>
+        </tr>
+        <tr>
+          <th>Unit Price</th>
+          <td><%= food.price %></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
+
