--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -1,8 +1,6 @@
-<%= form_with(model: food, class: "mt-4") do |form| %>
+<%= form_with(model: food) do |form| %>
   <% if food.errors.any? %>
-    <div class="alert alert-danger">
-      <h2><%= pluralize(food.errors.count, "error") %> prohibited this food from being saved:</h2>
-
+    <div style="color: red" class="alert alert-danger mx-3">
       <ul>
         <% food.errors.each do |error| %>
           <li><%= error.full_message %></li>
@@ -11,28 +9,27 @@
     </div>
   <% end %>
 
-  <div class="mb-3">
-    <%= form.label :name, class: "form-label" %>
-    <%= form.text_field :name, class: "form-control" %>
+  <div class="form-group mt-2">
+    <%= form.label :name, style: "display: block" %>
+    <%= form.text_field :name, class: "form-control w-100", required: true %>
   </div>
 
-  <div class="mb-3">
-    <%= form.label :measurement_unit, class: "form-label" %>
-    <%= form.text_field :measurement_unit, class: "form-control" %>
+  <div class="form-group mt-2">
+    <%= form.label :measurement_unit, style: "display: block" %>
+    <%= form.text_field :measurement_unit, class: "form-control w-100", required: true %>
   </div>
 
-  <div class="mb-3">
-    <%= form.label :price, class: "form-label" %>
-    <%= form.text_field :price, class: "form-control" %>
+  <div class="form-group mt-2">
+    <%= form.label :price, "Unit Price", style: "display: block" %>
+    <%= form.number_field :price, class: "form-control w-100", required: true %>
   </div>
 
-  <div class="mb-3">
-    <%= form.label :quantity, class: "form-label" %>
-    <%= form.number_field :quantity, class: "form-control" %>
+  <div class="form-group mt-2">
+    <%= form.label :quantity, style: "display: block" %>
+    <%= form.number_field :quantity, class: "form-control w-100", required: true %>
   </div>
 
-  <div>
-    <%= form.submit "Save Food", class: "btn btn-primary" %>
-    <%= link_to "Cancel", foods_path, class: "btn btn-secondary" %>
+  <div class="form-group d-flex justify-content-center mt-4">
+    <%= form.submit class: "form-control w-50 btn btn-success" %>
   </div>
 <% end %>
