--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,26 +1,43 @@
-<div class="d-flex justify-content-end mb-3">
-  <%= link_to "Add Food", new_food_path, class: "btn btn-success" %>
-</div>
-
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">Food</th>
-      <th scope="col">Measurement Unit</th>
-      <th scope="col">Unit Price</th>
-      <th scope="col">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @foods.each do |food| %>
-      <tr>
-        <td><%= food.name %></td>
-        <td><%= food.measurement_unit %></td>
-        <td><%= number_to_currency(food.price) %></td>
-        <td>
-          <%= link_to "Delete", food, data: { turbo_method: :delete, confirm: "Are you sure?" }, class: "btn btn-danger btn-sm" %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<section class='container'>
+  <div class="row">
+    <div class="col-md-12">
+      <p style="color: green"><%= notice %></p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+        <div class="block">
+          <div class="block-header block-header-default row">
+              <h1 class="block-title col-md-10">All Foods</h1>
+              <div class="block-options col-md-2 m-auto">
+                   <%= link_to "New food", new_food_path, class: "btn btn-info text-white" %>
+              </div>
+          </div>
+          <div class="block-content">
+           <table id="foods" class="table table-border table-striped">
+              <thead>
+                <tr>
+                  <th>Name Of Food</th>
+                  <th>Quantity</th>
+                  <th>Measurement Unit</th>
+                  <th>Price</th>
+                  <th>Actions</th>
+                </tr>
+              </thead>
+              <tbody>
+              <% @foods.each do |food| %>
+                <tr>
+                  <td><%= link_to food.name, food %></td>
+                  <td><%=  food.quantity < 0 ? 0 : food.quantity %></td>
+                  <td><%= food.measurement_unit %></td>
+                  <td>$<%= food.price %></td>
+                  <td><%= button_to "Remove", food, method: :delete, class: 'btn btn-danger mr-2' %></td>
+                </tr>
+              <% end %>
+              </tbody>
+            </table>
+          </div>
+        </div>
+    </div>
+  </div>
+</section>
