--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,5 +1,11 @@
-<h1>Add Food</h1>
+<section class="container">
+  <h1 class="d-flex justify-content-center">New food</h1>
 
-<%= render "form", food: @food %>
+  <%= render "form", food: @food %>
 
-<br>
+  <br>
+
+  <div>
+    <%= link_to "Back to foods", foods_path %>
+  </div>
+</section>
