--- a/app/views/recipe_foods/edit.html.erb
+++ b/app/views/recipe_foods/edit.html.erb
@@ -1,27 +1,9 @@
-<h1>Editing recipe food</h1>
+<h2 class="text-center text-success m-5">Editing recipe food</h2>
 
-<%= form_with(model: [@recipe, @recipe_food], url: recipe_recipe_food_path(@recipe, @recipe_food), method: :patch) do |form| %>
-  <div class="mb-3">
-    <%= form.label :recipe_id, 'Recipe' %>
-    <%= form.collection_select :recipe_id, Recipe.all, :id, :name, { selected: @recipe_food.recipe_id }, class: 'form-control' %>
-  </div>
-
-  <div class="mb-3">
-    <%= form.label :food_id, 'Food' %>
-    <%= form.collection_select :food_id, Food.all, :id, :name, { selected: @recipe_food.food_id }, class: 'form-control' %>
-  </div>
-
-  <div class="mb-3">
-    <%= form.label :quantity %>
-    <%= form.number_field :quantity, class: 'form-control' %>
-  </div>
-  
-  <%= form.submit 'Update Ingredient', class: 'btn btn-success' %>
-<% end %>
+<%= render "form", recipe_food: @recipe_food, edit: @edit %>
 
 <br>
 
-<div>
-  <%= link_to "Show this recipe food", @recipe_food %> |
-  <%= link_to "Back to recipe foods", recipe_path %>
+<div class="text-center">
+  <%= link_to "Back to recipe", recipe_path(@recipe) %>
 </div>
