--- a/app/views/recipe_foods/new.html.erb
+++ b/app/views/recipe_foods/new.html.erb
@@ -1,21 +1,12 @@
-<!-- app/views/recipe_foods/new.html.erb -->
+<h2 class="text-center text-success m-4">Add ingredient</h2>
 
-<%= form_with(model: [@recipe, @recipe_food], url: recipe_foods_path, method: :post) do |form| %>
-   <div class ="mb-3">
-    <%= form.label :recipe_id, 'Recipe' %>
-    <%= form.collection_select :recipe_id, Recipe.all, :id, :name, { prompt: 'Select a recipe' }, class: 'form-control' %>
-  </div>
-    
-  
-  <div class="mb-3">
-    <%= form.label :food_id, 'Food' %>
-    <%= form.collection_select :food_id, Food.all, :id, :name, { prompt: 'Select a food' }, class: 'form-control' %>
-  </div>
 
-  <div class="mb-3">
-    <%= form.label :quantity %>
-    <%= form.number_field :quantity, class: 'form-control' %>
-  </div>
-  
-  <%= form.submit 'Add Ingredient', class: 'btn btn-success' %>
-<% end %>
+<%= render "form", recipe_food: @recipe_food %>
+
+<br>
+
+<div class="text-center">
+  <%= link_to "Back to recipe", recipe_path(@recipe) %>
+</div>
+
+
