--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,42 +1,39 @@
-<%= form_with(model: recipe) do |form| %>
-  <% if recipe.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(recipe.errors.count, "error") %> prohibited this recipe from being saved:</h2>
-
-      <ul>
-        <% recipe.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
-  </div>
-
-  <div>
-    <%= form.label :preparation_time, style: "display: block" %>
-    <%= form.number_field :preparation_time %>
-  </div>
-
-  <div>
-    <%= form.label :cooking_time, style: "display: block" %>
-    <%= form.number_field :cooking_time %>
-  </div>
-
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_area :description %>
-  </div>
-
-  <div>
-    <%= form.label :public, style: "display: block" %>
-    <%= form.check_box :public %>
-  </div>
-
-  <div>
-    <%= form.submit %>
+<% if @recipe.errors.any? %>
+  <div id="error_explanation" class="alert alert-danger mx-3">
+    <ul>
+      <% @recipe.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
   </div>
 <% end %>
+<div class="row justify-content-center">
+    <div class="col-6">
+<%= form_with(model: recipe) do |form| %>
+ 
+  <div>
+    <%= form.label :name, style: "display: block", class: 'form-label' %>
+    <%= form.text_field :name, class: 'form-control', required: true %>
+  </div>
+
+  <div>
+    <%= form.label :preparation_time, "Preparation time in hours", style: "display: block", class: 'form-label' %>
+    <%= form.number_field :preparation_time,  step: 0.01, class: 'form-control',  required: true %>
+  </div>
+
+  <div>
+    <%= form.label :cooking_time, "Cooking time in hours", style: "display: block", class: 'form-label' %>
+    <%= form.number_field :cooking_time, step: 0.01, class: 'form-control', required: true  %>
+  </div>
+
+  <div>
+    <%= form.label :description, style: "display: block",  class: 'form-label'%>
+    <%= form.text_area :description,  rows: 5, class: 'form-control', required: true  %>
+  </div>
+
+  <div class="my-3">
+    <%= form.submit class: 'btn btn-success'%>
+  </div>
+<% end %>
+ </div>
+  </div>
