--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,27 +1,23 @@
-<div id="<%= dom_id recipe %>">
+<div  class="col-3">
   <p>
-    <strong>Name:</strong>
     <%= recipe.name %>
   </p>
+   <p>
+  <% if can? :destroy, recipe %>
+  <%= button_to "Remove", recipe, method: :delete, class: 'btn btn-danger' %>
+  <% end %>
+    </p>
+</div>
 
-  <p>
-    <strong>Preparation time:</strong>
-    <%= recipe.preparation_time %>
-  </p>
+ <div  class="col-6 col-lg-9 ">
+  <a href="<%= recipe_path(recipe) %>">
+     <p>
 
-  <p>
-    <strong>Cooking time:</strong>
-    <%= recipe.cooking_time %>
-  </p>
-
-  <p>
-    <strong>Description:</strong>
     <%= recipe.description %>
   </p>
+  </a>
+ 
+  </div>
 
-  <p>
-    <strong>Public:</strong>
-    <%= recipe.public %>
-  </p>
+ 
 
-</div>
