--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,9 +1,10 @@
-<h1>New recipe</h1>
+
+<h1 class="text-center text-success my-3">New recipe</h1>
 
 <%= render "form", recipe: @recipe %>
 
 <br>
 
-<div>
-  <%= link_to "Back to recipes", recipes_path %>
+<div class="text-center my-3">
+  <%= link_to "Back to recipes", recipes_path, class: 'btn btn-success' %>
 </div>
