--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,32 +1,71 @@
-<div class="container-fluid p-2">
-  <div class="card">
-    <h3 class="card-title text-center"><%= @recipe.name %></h3>
-    <div class="card-body">
-      <span class="text-start">Preparation time:<%= @recipe.preparation_time %> hours</span>
-       <% if user_signed_in? && current_user == @recipe.user %>
-      <div class="d-flex justify-content-end form-check form-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" <%= 'checked' if @recipe.public %> >
-        <label class="form-check-label" for="flexSwitchCheckDefault">Public</label>
+<div class="row justify-content-center m-3">
+  <div class="col-8">
+    <h2 class="text-center mb-5"><%= @recipe.name %></h2>
+    <div class="d-flex justify-content-between">
+      <div class="d-flex">
+        <p><b>Preparation Time: </b></p>
+        <p class="mx-2"><%= @recipe.preparation_time %> hours</p>
       </div>
-      <% end %>
-
-      <span class="text-start">Cooking time: <%= @recipe.cooking_time %> hours</span>
-      <span class="text-start d-flex flex-direction-column"><%= @recipe.description %></span>
-      <div class="d-flex justify-content-around p-2 border-bottom">
-        <button type="button" class="btn btn-success">Generate Shopping List</button>
-       <!-- Display the Add Ingredient -->
-
-       <%= link_to 'Add Ingredient', new_recipe_food_path(recipe_id: @recipe.id), class: 'btn btn-success' %>
-      
+      <% if can? :manage, @recipe %>
+      <div class="form-check form-switch">
+        <label class="form-check-label" for="publicToggle">Public</label>
+        <input class="form-check-input" type="checkbox" id="publicToggle" name="recipe[public]" <%= @recipe.public ? 'checked' : '' %>>
       </div>
+       <% end %>
     </div>
+    <div id="recipeId" hidden ><%= @recipe.id %></div>
+    <div class="d-flex">
+      <p><b>Cooking Time: </b></p>
+      <p class="mx-2"><%= @recipe.cooking_time %> hours</p>
+    </div>
+    <div>
+      <p><b>Description: </b></p>
+      <p><%= @recipe.description %></p>
+    </div>
+     <% if can? :manage, @recipe %>
+    <div class="d-flex justify-content-between">
+      <%= link_to "Generate shopping list", general_shopping_list_path, class: 'btn btn-success my-2' %>
+      <%= link_to "Add ingredient", new_recipe_recipe_food_path(@recipe), class: 'btn btn-success my-2' %>
+    </div>
+    <% end %>
+    <table class="table table-success table-striped-columns my-4">
+      <thead>
+        <tr>
+          <th scope="col">Food</th>
+          <th scope="col">Quantity</th>
+          <th scope="col">Value</th>
+           <% if can? :manage, @recipe %>
+          <th scope="col">Actions</th>
+          <% end %>
+        </tr>
+      </thead>
+      <tbody>
+        <% if @recipe_foods.present? %>
+        <% @recipe_foods.each do |recipe_food| %>
+        <tr>
+          <td><%= recipe_food.food.name %> </td>
+          <td><%= recipe_food.quantity %> <%= recipe_food.food.measurement_unit %></td>
+          <td>$<%= recipe_food.quantity * recipe_food.food.price %></td>
+          <% if can? :manage, recipe_food %>
+          <td class="d-flex">
+            <%= link_to "Modify", edit_recipe_recipe_food_path(recipe_food.recipe, recipe_food), class: 'p-2 mx-2'%> 
+            <%= button_to "Remove",  recipe_recipe_food_path(recipe_food.recipe.id, recipe_food), method: :delete, class: 'btn btn-warning' %>
+          </td>
+          <% end %>
+        </tr>
+        <% end %>
+        <% else %>
+        <td colspan="4" class="text-center"> No ingredients yet</td>
+        <% end %> 
+      </tbody>
+    </table>
   </div>
 </div>
 
-<%= render 'recipe_foods/recipe_food', recipe: @recipe %>
-
-<div>
-  <%= link_to "Edit this recipe", edit_recipe_path(@recipe) %> |
-  <%= link_to "Back to recipes", recipes_path %>
-  <%= button_to "Destroy this recipe", @recipe, method: :delete %>
+<div class="text-center my-3  ">
+  <%= link_to "Back to recipes", recipes_path, class: 'btn btn-warning my-2'  %>
+   <% if can? :destroy, @recipe %>
+  <%= button_to "Remove recipe", @recipe, method: :delete, class: 'btn btn-danger ' %>
+  <% end %>
 </div>
+
