--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,6 +18,9 @@
           <li class="nav-item">
             <%= link_to 'Add Food', new_food_path, class: 'nav-link' %>
           </li>
+           <li class="nav-item">
+            <%= link_to 'View Foods', foods_path, class: 'nav-link' %>
+          </li>
             <li class="nav-item">
             <%= link_to 'General Shopping List', general_shopping_list_path, class: 'nav-link' %>
             </li>
