--- a/app/views/general_shopping_list/index.html.erb
+++ b/app/views/general_shopping_list/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row justify-content-center m-3">
   <div class="col-8">
-    <h2 class="text-center mb-5">Shoping List</h2>
+    <h2 class="text-center mb-5">Shopping List</h2>
     <div class="justify-content-between">
         <div class="row">
             <div class="col-md-6 d-flex">
