--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -22,7 +22,7 @@
             <%= link_to 'View Foods', foods_path, class: 'nav-link' %>
           </li>
             <li class="nav-item">
-            <%= link_to 'Generate Shopping List', general_shopping_list_path, class: 'nav-link' %>
+            <%= link_to 'General Shopping List', general_shopping_list_path, class: 'nav-link' %>
             </li>
         <% end %>
       </ul>
